Make html draft

--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript First Project</title>
+    <title>Rock Paper Scissors game</title>
+    <link ref="stylesheet" href="style.css"> 
 </head>
 <body>
-    <script src="javascript.js"></script>
+
+<!--  <script src="javascript.js"></script> -->
+
+<div class="header"> 
+    <h1>Rock Paper Scissors</h1> 
+</div>
+<div class="status">
+    <div id="status-update">
+        statusUpdate
+    </div>
+    <div id="player-choice">
+        Player Choice ICON
+    </div>
+    <div id="computer-choice">
+        Computer choice ICON
+    </div>
+    <div id="player-score">
+        Player Score: 
+    </div>
+    <div id="computer-score">
+        Computer Score: 
+    </div>
+</div>
+<div class="choice-icons">
+    <div class="column">
+        <img src="rock.png" alt="rock">
+        Rock
+    </div>
+    <div class="column">
+        <img src="paper.png" alt="paper">
+        Paper
+    </div>
+    <div class="column">
+        <img src="scissors.png" alt="scissors">
+        Scissors
+    </div>
+</div>
+<div class="footer">
+Designed by <a href="https://github.com/darialiit">@darialiit</a>
+</div>
+
+
     
 </body>
 </html>
