--- a/index.html
+++ b/index.html
@@ -18,32 +18,37 @@
 <div class="container">
     <div class="status">
         <div id="status-update">
-            statusUpdate
+            <h3>statusUpdate</h3>
         </div>
-        <div id="player-choice">
-            Player Choice ICON
+        <div class="icons">
+            <div id="player-choice">
+                Player Choice ICON
+            </div>
+            <div id="computer-choice">
+                Computer choice ICON
+            </div>
         </div>
-        <div id="computer-choice">
-            Computer choice ICON
+        <div class="score">
+            <div id="player-score">
+                Player Score: 
+            </div>
+            <div id="computer-score">
+                Computer Score: 
+            </div>
         </div>
-        <div id="player-score">
-            Player Score: 
-        </div>
-        <div id="computer-score">
-            Computer Score: 
-        </div>
+        
     </div>
     <div class="choice-icons">
         <div class="column">
-            <img src="rock.png" alt="rock">
+            <img src="rockw.png" alt="rock">
             Rock
         </div>
         <div class="column">
-            <img src="paper.png" alt="paper">
+            <img src="paperw.png" alt="paper">
             Paper
         </div>
         <div class="column">
-            <img src="scissors.png" alt="scissors">
+            <img src="scissorsw.png" alt="scissors">
             Scissors
         </div>
     </div>
