add more pics and players name choice

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 
-<!--  <script src="javascript.js"></script> -->
-
 <div class="header"> 
     <h1>Rock Paper Scissors</h1> 
 </div>
@@ -18,7 +16,7 @@
 <div class="container">
     <div class="status">
         <div id="status-update">
-            <h3>statusUpdate</h3>
+            <h3>Make your move!</h3>
         </div>
         <div class="icons">
             <div id="player-choice">
@@ -33,7 +31,7 @@
                 Player Score: 
             </div>
             <div id="computer-score">
-                Computer Score: 
+                Computer's Score: 
             </div>
         </div>
         
@@ -41,24 +39,24 @@
     <div class="choice-icons">
         <div class="column">
             <img src="rockw.png" alt="rock">
-            Rock
+            <h4>Rock</h4>
         </div>
         <div class="column">
             <img src="paperw.png" alt="paper">
-            Paper
+            <h4>Paper</h4>
         </div>
         <div class="column">
             <img src="scissorsw.png" alt="scissors">
-            Scissors
+            <h4>Scissors</h4>
         </div>
     </div>
 </div>
 
 <div class="footer">
-Designed by <a href="https://github.com/darialiit">@darialiit</a>
+Designed by<a href="https://github.com/darialiit">@darialiit</a>
 </div>
 
+<script src="javascript.js"></script>
 
-    
 </body>
 </html>
