Add the loading icons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="icons">
             <div id="player-choice">
-                Player Choice ICON
+                <img src="loading.png" alt="loading">
             </div>
             <div id="computer-choice">
-                Computer choice ICON
+                <img src="loading.png" alt="loading">
             </div>
         </div>
         <div class="score">
