Start working on the Computer choice

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="icons">
             <div id="player-choice">
-                <img src="loading.png" alt="loading">
+                <img src="loading.png" alt="loading" id="player-choice-img">
             </div>
             <div id="computer-choice">
-                <img src="loading.png" alt="loading">
+                <img src="loading.png" alt="loading" id="computer-choice-img">
             </div>
         </div>
         <div class="score">
