--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
+    <link rel="icon" href="flaticon1.png">
 </head>
 <body>
 
