Choose the font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">  -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee&display=swap" rel="stylesheet">
     <link rel="icon" href="flaticon1.png">
 </head>
 <body>
@@ -28,7 +29,6 @@
                 <img src="loading.png" alt="loading" id="computer-choice-img">
             </div>
         </div>
-
         <div class="score">
             <div>
                 <strong><span id="player-score">Player Score:</span> <span id="player-score-n">XXX</span></strong>
