add the pop-up with name (testing)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 </head>
 <body>
 
+    <!-- Making the popup -->
+<div id="popupOverlay" class="hidden">
+    <div id="popupContent">
+        <h2>What is your name?</h2>
+        <p>Add the content here later</p>
+        <button id="closePopup">Close</button>
+    </div>
+</div>
+  
+<!-- end of the popup -->
+
 <div class="header"> 
     <h1>Rock Paper Scissors</h1> 
 </div>
@@ -57,6 +68,7 @@
 <div class="footer">
 Designed by<a href="https://github.com/darialiit" target="_blank">@darialiit</a>
 </div>
+
 
 <script src="javascript.js"></script>
 
