--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <div class="score">
             <div>
-                <strong><span id="player-score">Player Score:</span> <span id="player-score-n">XXX</span></strong>
+                <strong><span id="player-score">Player Score:</span> <span id="player-score-n"></span></strong>
             </div>
             <div id="computer-score">
-                <strong>Computer: <span id="computer-score-n">XXX</span></strong>
+                <strong>Computer: <span id="computer-score-n"></span></strong>
             </div>
         </div>
     </div>
